--- a/client/src/sass/_general.scss
+++ b/client/src/sass/_general.scss
@@ -25,7 +25,7 @@ input::placeholder {
 
 main{
   width: 100%;
-  height: 100%;
+  min-height: 90vh;
   background-color: $sc;
   border-radius: $border;
   padding:10px;
@@ -97,6 +97,7 @@ main{
           text-overflow: ellipsis;
           overflow: hidden;
           white-space: nowrap;
+          text-transform: initial;
         }
         p{
           font-size: .9em;
@@ -106,6 +107,7 @@ main{
       h2{
           margin-bottom: 4px;
           padding: 3px;
+          text-transform: capitalize;
       }
       h3{
           font-size: 1.6em;
@@ -113,12 +115,12 @@ main{
       strong{
           margin-left: 7px;
       }
-      &.in{
+      &.earnings{
           h3{
               color: $green;
           }
       }
-      &.out{
+      &.expenses{
           h3{
               color: $red;
           }
@@ -308,6 +310,24 @@ main{
   .btn{
     width: 200px;
   }
+
+  .transactions{
+    .transaction{
+      .text{
+        width: 50%;
+        p:last-child{
+          width: 40%;
+        }
+        .notion{
+            width: 90%;
+            text-transform: initial;
+        }
+        
+      }
+      }
+    }
+
+  
 
   .btn-add{
     width: 80px;
