--- a/client/src/sass/_home.scss
+++ b/client/src/sass/_home.scss
@@ -34,6 +34,7 @@
             @include flex(center,center);
             h2{
                 color: $pc;
+                text-transform: capitalize;
             }
             &.transportation{
                 @include categories($transportation);
