--- a/client/src/sass/_categories.scss
+++ b/client/src/sass/_categories.scss
@@ -16,6 +16,7 @@
         @include flex(center,center);
         h2{
             color: $pc;
+            text-transform: capitalize;
         }
         &.transportation{
             @include categories($transportation);
