Add and remove functionality done

--- a/client/src/sass/_records.scss
+++ b/client/src/sass/_records.scss
@@ -73,6 +73,9 @@
             }
             .text{
                 margin-right: auto;
+                p{
+                    display: flex;
+                }
             }
         }      
     }
@@ -101,6 +104,9 @@
             }
             .text{
                 margin-right: auto;
+                p{
+                    display: flex !important;
+                }
             }
         } 
     }
