--- a/client/src/sass/_add.scss
+++ b/client/src/sass/_add.scss
@@ -65,6 +65,7 @@
                     font-size: 1.1em;
                     height: 100%;
                     text-align: center;
+                    text-transform: capitalize;
                     line-height: 50px;
                     margin: 0;
                     display: block;
