--- a/client/src/sass/_general.scss
+++ b/client/src/sass/_general.scss
@@ -6,6 +6,26 @@
     color: $pc;
 }
 
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: $sc;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $pc;
+  border-radius: 10px;
+  border: 3px solid $sc;
+  transition: background .3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba($pc, .6);
+  transition: background .3s;
+}
+
 body{
   background-color: $pc;
 }
@@ -25,7 +45,7 @@ input::placeholder {
 
 main{
   width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
   background-color: $sc;
   border-radius: $border;
   padding:10px;
@@ -178,32 +198,11 @@ main{
 }
 
 
-.custom-select {
+.select {
     width: 100%;
-    position: relative;
-    font-family: Arial;
-    display: inline-block;
-    margin: 0 auto 20px;
-    &:first-child{
-        margin-left: 0;
-    }
-    label{
-        font-size: 1.3em;
-        margin-bottom: 0 0 0 3px;
-    }
-  }
+}
   
-  .custom-select select {
-    display: none; 
-  }
-  
-  .select-selected {
-    border: 4px solid $pc !important;
-    border-radius: 15px;
-    position: relative;
-    transition: color .5s, background-color .5s;
-    margin-top: 5px;
-  }
+
 
   .click{
     background-color: $pc;
@@ -212,54 +211,7 @@ main{
     border-bottom: none  !important;
 }
   
-  .select-selected:after {
-    position: absolute;
-    content: "";
-    top: 14px;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border: 6px solid transparent;
-    border-color: $pc transparent transparent transparent;
-    transition: all .5s;
-  }
-  
-  .select-selected.select-arrow-active:after {
-    border-color: transparent transparent $sc transparent;
-    top: 7px;
-    transition: all .5s;
-  }
-  
-  
 
-  .select-items div,.select-selected {
-    color: $pc;
-    padding: 8px 16px;
-    border: 1px solid transparent;
-    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-    cursor: pointer;
-    
-  }
-  
-  .select-items {
-    position: absolute;
-    background-color: $sc;
-    top: 100%;
-    left: 0;
-    right: 0;
-    z-index: 99;
-    border: 4px solid $pc;
-    border-top: none;
-    border-radius: 0 0  15px 15px;
-  }
-
-  .select-hide {
-    display: none;
-  }
-  
-  .select-items div:hover, .same-as-selected {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
 
 .input{
     width: 100%;
@@ -358,7 +310,7 @@ main{
     }
   }
 
-  .custom-select {
+  .custom {
     width: 250px;
     margin: 0 30px 30px;
   }
@@ -430,7 +382,7 @@ main{
   padding-bottom: 50px; 
   }
 
-  .custom-select {
+  .custom {
     width: 250px;
     margin: 0 30px 30px;
   }
