--- a/client/src/sass/_records.scss
+++ b/client/src/sass/_records.scss
@@ -1,4 +1,47 @@
+.filters{
+    .select{
+        width: 100%;
+        margin-bottom: 20px;
+        display: inline-block;
+        label{
+            width: 100%;
+            display: block;
+            margin:0 0  5px;
+        }
+        select{
+            width: 100%;
+            padding: 8px;
+            border: 4px solid $pc;
+            border-radius: $border;
+            font-size: 1.2em;
+            text-transform: capitalize;
+            transition: border-radius .5s, color  .5s, background-color .5s;
+            &:focus{
+                background-color: $pc;
+                color: $sc;
+                border-radius:$border $border 0 0;
+            }
+            option{
+                text-transform: capitalize;
+                font-size: 1.1em;
+                background-color: $sc;
+                color: $pc;
+            }
+        }
+    }
+    .btn.btn-reset{
+        background-color: $sc;
+        color: $pc;
+        transition: color  .5s, background-color .5s;
+    }
+    button{
+        margin-left: 0;
+        margin-bottom: 10px;
+    }
+}
+
 .records{
+    margin-top: 20px;
     .transactions{
         width: 100%;
         .transaction{
@@ -54,6 +97,42 @@
 /*--desktop--*/
   
 @media (min-width : 1024px){
+    .filters{
+        .select{
+            width: 300px;
+            margin-right: 40px;
+            display: inline-block;
+            label{
+                width: 100%;
+                display: block;
+                margin:0 0  5px;
+            }
+            select{
+                width: 300px;
+                padding: 8px;
+                border: 4px solid $pc;
+                border-radius: $border;
+                font-size: 1.2em;
+                text-transform: capitalize;
+                transition: border-radius .5s, color  .5s, background-color .5s;
+                &:focus{
+                    background-color: $pc;
+                    color: $sc;
+                    border-radius:$border $border 0 0;
+                }
+                option{
+                    text-transform: capitalize;
+                    font-size: 1.1em;
+                    background-color: $sc;
+                    color: $pc;
+                }
+            }
+        }
+        button{
+            margin-left: 0;
+            margin-top: 20px;
+        }
+    }
     .records{
         margin-bottom: 60px;
         .transaction{
